<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg2">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_alignParentTop="true"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:gravity="center_horizontal|center_vertical"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.49">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            android:gravity="center_horizontal|center_vertical"
            android:text="@string/action_sign_up"
            android:textAppearance="@style/action_sign_up" />

        <EditText
            android:id="@+id/username2"
            android:layout_width="match_parent"
            android:layout_height="63dp"
            android:layout_marginTop="20dp"
            android:autofillHints=""
            android:background="@drawable/input_rectangle"
            android:gravity="center_horizontal|center_vertical"
            android:hint="@string/prompt_email"
            android:inputType="textEmailAddress"
            android:selectAllOnFocus="true" />

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:background="@drawable/input_rectangle">

            <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:gravity="center_horizontal|center_vertical"
                android:hint="@string/username" />
        </android.support.design.widget.TextInputLayout>

        <EditText
            android:id="@+id/editTextDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:autofillHints=""
            android:background="@drawable/input_rectangle"
            android:ems="10"
            android:gravity="center_horizontal|center_vertical"
            android:hint="@string/dateofbirth"
            android:inputType="date" />

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/wide_rectangle"
            android:gravity="center_horizontal|center_vertical">

            <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="135dp"
                android:gravity="center_horizontal"
                android:hint="@string/about" />
        </android.support.design.widget.TextInputLayout>

        <EditText
            android:id="@+id/editTextTextPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:autofillHints=""
            android:background="@drawable/input_rectangle"
            android:ems="10"
            android:gravity="center_horizontal|center_vertical"
            android:hint="@string/prompt_password"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/login2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginStart="48dp"
            android:layout_marginTop="25dp"
            android:layout_marginEnd="48dp"
            android:background="@drawable/button"
            android:enabled="false"
            android:text="@string/action_sign_in"
            android:textAppearance="@style/action_sign_in" />

    </LinearLayout>

</android.support.constraint.ConstraintLayout>